--- a/config/database.yml
+++ b/config/database.yml
@@ -19,14 +19,14 @@ default: &default
 
 development:
   <<: *default
-  database: sheti-bajar-web-app_development
+  database: sheti-bajar-web-dev
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: sheti-bajar-web-app_test
+  database: sheti-bajar-web-test
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -49,6 +49,7 @@ test:
 #
 production:
   <<: *default
-  database: sheti-bajar-web-app_production
-  username: sheti-bajar-web-app
-  password: <%= ENV['SHETI-BAJAR-WEB-APP_DATABASE_PASSWORD'] %>
+  url: <%= ENV['DATABASE_URL'] %>
+  # database: <%= ENV['APP_DATABASE_PRODUCTION_URL'] %>
+  # username: <%= ENV['APP_DATABASE_USERNAME'] %>
+  # password: <%= ENV['APP_DATABASE_PASSWORD'] %>
