--- a/config/database.yml
+++ b/config/database.yml
@@ -10,7 +10,7 @@
 #   https://dev.mysql.com/doc/refman/5.7/en/password-hashing.html
 #
 default: &default
-  adapter: mysql2
+  adapter: postgresql
   encoding: utf8
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   username: root
@@ -49,7 +49,7 @@ test:
 #
 production:
   <<: *default
-  url: <%= ENV['DATABASE_URL'] %>
-  # database: <%= ENV['APP_DATABASE_PRODUCTION_URL'] %>
-  # username: <%= ENV['APP_DATABASE_USERNAME'] %>
-  # password: <%= ENV['APP_DATABASE_PASSWORD'] %>
+  # url: <%= ENV['DATABASE_URL'] %>
+  database: sheti-bajar-web-prod
+  username: <%= ENV['APP_DATABASE_USERNAME'] %>
+  password: <%= ENV['APP_DATABASE_PASSWORD'] %>
