--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-API_SECRETE_TOKEN=
+API_SECRETE_TOKEN=b7Scbac5W75308Ac9ddP6ed52N65ab6Ibf80371L913cfaa
 APP_DATABASE_PRODUCTION_URL=
 APP_DATABASE_USERNAME=
 APP_DATABASE_PASSWORD=
